# cmdjewel

./: .gitignore  Cargo.toml  README.md  TROUBLESHOOTING.md  __main__.py  algebra.py  board.py  build.sh  cmdjewel.it  console.py  game.py  main.py  pre_build.sh
.github/workflows/: rust.yml
assets/: ca.potatoe.cmdjewel.appdata.xml
cmdjewel/: Cargo.toml  cmdjewel.it
cmdjewel/src/: animations.rs  constants.rs  main.rs  music.rs  ui.rs  view.rs
cmdjewel/src/animations/: explosion.rs  mod.rs  warp.rs
cmdjewel/src/config/: data.rs  hacks.rs  mod.rs
cmdjewel/src/ui/: macros.rs  mod.rs  multiline_button.rs  tutorial.rs
cmdjewel_core/: Cargo.toml
cmdjewel_core/src/: board.rs  constants.rs  gems.rs  lib.rs  matches.rs  point.rs
src/: animations.rs  game.rs  main.rs  multiline_button.rs  music.rs  ui.rs  view.rs
