[package]
name = "cmdjewel"
version = "0.2.0"
edition = "2021"

[dependencies]
cpal = "0.16.0"
cursive = "0.21.1"
it2play-rs = { git = "https://codeberg.org/pastthepixels/it2play-rs" }
rand = "0.9.2"
dirs = "6.0.0"
toml = "0.9.5"
serde = { version = "1.0.219", features = ["derive"] }
cmdjewel_core = { path = "../cmdjewel_core" }
