[package]
name = "cmdjewel"
version = "0.3.0"
edition = "2021"

[dependencies]
cpal = "0.16.0"
cursive = "0.21.1"
it2play-rs = "0.1.2"
rand = "0.9.2"
dirs = "6.0.0"
toml = "0.9.5"
toml_edit = { version = "0.23.4", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
cmdjewel_core = { path = "../cmdjewel_core" }
